# delta-play-replay

./: .dprint.json  .gitattributes  .gitignore  .justfile  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/uncage/: Cargo.toml
crates/uncage-client/: Cargo.toml  build.rs
crates/uncage-client/cert/: aoe.key  aoe.pem  cade-client.key  cade-client.pem
crates/uncage-client/proto/: cade_api.js  file_metadata.proto
crates/uncage-client/src/: lib.rs
crates/uncage-model/: Cargo.toml
crates/uncage-model-proc-macro/src/: lib.rs
crates/uncage-model/src/: document.rs  model.rs  path.rs  selector.rs
docs/: format.md  requirements.md
examples/: playback_blob.rs
examples/decompress/: Cargo.toml
examples/decompress/examples/: decompress_recording.rs
examples/playback/: Cargo.toml
scripts/: generate_template_model.js
src/: model.rs
uncage-client/: Cargo.toml  build.rs
uncage-client/cert/: cade-client.key  cade-client.pem  certificate-authority.pem
uncage-client/proto/: atlas_data.proto  cade_api.proto
uncage-client/proto/AoE2DE_s/envoy/config/cluster/v3/: circuit_breaker.proto  outlier_detection.proto
uncage-client/proto/AoE2DE_s/envoy/config/core/v3/: backoff.proto  base.proto  http_uri.proto  protocol.proto  resolver.proto  substitution_format_string.proto  udp_socket_config.proto
uncage-client/proto/AoE2DE_s/envoy/config/endpoint/v3/: load_report.proto
uncage-client/proto/AoE2DE_s/envoy/config/listener/v3/: quic_config.proto  udp_listener_config.proto
uncage-client/proto/AoE2DE_s/envoy/config/rbac/v3/: rbac.proto
uncage-client/proto/AoE2DE_s/envoy/config/route/v3/: route_components.proto  scoped_route.proto
uncage-client/proto/AoE2DE_s/envoy/extensions/filters/http/rbac/v3/: rbac.proto
uncage-client/proto/AoE2DE_s/envoy/extensions/filters/network/http_connection_manager/v3/: http_connection_manager.proto
uncage-client/proto/AoE2DE_s/envoy/extensions/transport_sockets/tls/v3/: secret.proto  tls.proto
uncage-client/proto/AoE2DE_s/envoy/type/matcher/v3/: metadata.proto  regex.proto  value.proto
uncage-client/proto/AoE2DE_s/envoy/type/metadata/v3/: metadata.proto
uncage-client/proto/AoE2DE_s/envoy/type/tracing/v3/: custom_tag.proto
uncage-client/proto/AoE2DE_s/envoy/type/v3/: http.proto  percent.proto  range.proto
uncage-client/proto/AoE2DE_s/google/api/expr/v1alpha1/: checked.proto  syntax.proto
uncage-client/proto/AoE2DE_s/google/protobuf/: any.proto  descriptor.proto  duration.proto  empty.proto  wrappers.proto
uncage-client/proto/AoE2DE_s/src/proto/grpc/lookup/v1/: rls_config.proto
uncage-client/proto/AoE2DE_s/udpa/annotations/: migrate.proto  versioning.proto
uncage-client/proto/AoE2DE_s/validate/: validate.proto
uncage-client/proto/AoE2DE_s/xds/core/v3/: context_params.proto  resource_locator.proto
uncage-client/proto/AoE2DE_s/xds/type/matcher/v3/: string.proto
uncage-client/proto/cade/: atlas_data.proto  file_metadata.proto
uncage-client/proto/cade/envoy/annotations/: deprecation.proto
uncage-client/proto/cade/envoy/config/accesslog/v3/: accesslog.proto
uncage-client/proto/cade/envoy/config/cluster/v3/: cluster.proto  filter.proto
uncage-client/proto/cade/envoy/config/core/v3/: address.proto  config_source.proto  event_service_config.proto  extension.proto  grpc_service.proto  health_check.proto  proxy_protocol.proto  socket_option.proto
uncage-client/proto/cade/envoy/config/endpoint/v3/: endpoint.proto  endpoint_components.proto
uncage-client/proto/cade/envoy/config/listener/v3/: api_listener.proto  listener.proto  listener_components.proto
uncage-client/proto/cade/envoy/config/route/v3/: route.proto
uncage-client/proto/cade/envoy/config/trace/v3/: http_tracer.proto
uncage-client/proto/cade/envoy/extensions/clusters/aggregate/v3/: cluster.proto
uncage-client/proto/cade/envoy/extensions/filters/common/fault/v3/: fault.proto
uncage-client/proto/cade/envoy/extensions/filters/http/fault/v3/: fault.proto
uncage-client/proto/cade/envoy/extensions/filters/http/router/v3/: router.proto
uncage-client/proto/cade/envoy/extensions/transport_sockets/tls/v3/: common.proto
uncage-client/proto/cade/envoy/service/discovery/v3/: discovery.proto
uncage-client/proto/cade/envoy/service/load_stats/v3/: lrs.proto
uncage-client/proto/cade/envoy/type/http/v3/: path_transformation.proto
uncage-client/proto/cade/envoy/type/matcher/v3/: number.proto  path.proto  string.proto
uncage-client/proto/cade/envoy/type/v3/: semantic_version.proto
uncage-client/proto/cade/google/protobuf/: struct.proto  timestamp.proto
uncage-client/proto/cade/google/rpc/: status.proto
uncage-client/proto/cade/udpa/annotations/: security.proto  sensitive.proto  status.proto
uncage-client/proto/cade/xds/annotations/v3/: status.proto
uncage-client/proto/cade/xds/core/v3/: authority.proto  collection_entry.proto  extension.proto
uncage-client/proto/cade/xds/type/matcher/v3/: matcher.proto  regex.proto
uncage-client/src/: lib.rs  main.rs
uncage-model/: Cargo.toml
uncage-model-proc-macro/: Cargo.toml
uncage-model-proc-macro/src/: lib.rs
uncage-model/src/: document.rs  lib.rs  model.rs  patcher.rs  references.rs
uncage-patcher/: Cargo.toml
uncage-patcher/definition/: FORMAT.md
uncage-patcher/resources/: rec-2021-05-22T224912.cars  rec-2021-05-22T224912.carz
uncage-patcher/src/: lib.rs  model.rs
