[package]
name = "uncage"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[workspace.package]
authors = ["eater <=@eater.me>", "the libre:match team <info@librematch.org>"]
categories = ["command-line-utilities"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/librematch/delta-play-replay"

[workspace]
members = [
  "examples/decompress",
  "examples/playback",
  "uncage-client",
  "uncage-model",
  "uncage-model-proc-macro",
]

[workspace.dependencies]
uncage-client = { path = "uncage-client" }
uncage-model = { path = "uncage-model" }
uncage-model-proc-macro = { path = "uncage-model-proc-macro" }

[dependencies]
uncage-client = { workspace = true }
uncage-model = { workspace = true }

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true
