[workspace.package]
authors = ["eater <=@eater.me>", "the libre:match team <info@librematch.org>"]
categories = ["command-line-utilities"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/librematch/delta-play-replay"

[workspace]
members = [
  "crates/uncage-client",
  "crates/uncage-model",
  "crates/uncage-model-proc-macro",
  "examples/decompress",
  "examples/playback",
]

[workspace.dependencies]
uncage-client = { path = "crates/uncage-client" }
uncage-model = { path = "crates/uncage-model" }
uncage-model-proc-macro = { path = "crates/uncage-model-proc-macro" }

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true
