[workspace.package]
authors = ["eater <=@eater.me>", "the libre:match team <info@librematch.org>"]
categories = ["command-line-utilities"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/librematch/delta-play-replay"

[workspace]
members = [
  "crates/uncage-client",
  "crates/uncage-model",
  "crates/uncage-model-proc-macro",
  "examples/decompress",
  "examples/playback",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
brotli = "3.5.0"
byteorder = "1.5.0"
bytes = "1.6.1"
serde_json = "1.0.121"
tokio = { version = "1.39.2" }
uncage-client = { path = "crates/uncage-client" }
uncage-model = { path = "crates/uncage-model" }

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true
