[package]
name = "uncage-model-proc-macro"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc_macro_roids = "0.7.0"
proc-macro2 = "1.0.27"
syn = "1.0.72"
quote = "1.0.9"
darling = "0.13.0"
heck = "0.3.2"