[package]
name = "uncage-model-proc-macro"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
heck = "0.3.2"
proc-macro2 = "1.0.27"
proc_macro_roids = "0.7.0"
quote = "1.0.9"
syn = "1.0.72"
