[package]
name = "uncage-model-proc-macro"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.14.4"
heck = "0.3.3"
proc-macro2 = "1.0.86"
proc_macro_roids = "0.8.0"
quote = "1.0.36"
syn = "1.0.109"
