[package]
name = "uncage-model"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
uncage-model-proc-macro = { path = "../uncage-model-proc-macro" }
