[package]
name = "uncage-client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bytes = "1.6.1"
hyper = "1.4.1"
hyper-openssl = "0.10.2"
prost = "0.13.1"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tonic-openssl = "0.2.0"
tower = "0.4.13"
xz2 = "0.1.7"

[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10.66"
