[package]
name = "uncage-client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bytes = { workspace = true }
hyper = "0.14.30"
hyper-openssl = "0.9.2"
prost = "0.7.0"
tokio = { workspace = true, features = ["full"] }
tonic = "0.4.3"
tonic-openssl = "0.2.0"
tower = "0.4.13"
xz2 = "0.1.7"

[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10.66"
