[package]
name = "uncage-model"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde_json = { version = "1.0.121", features = ["preserve_order"] }
uncage-model-proc-macro = { workspace = true }
