[package]
name = "uncage-model"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
num-derive = "0.3.3"
num-traits = "0.2.19"
serde_json = { workspace = true, features = ["preserve_order"] }
uncage-model-proc-macro = { path = "../uncage-model-proc-macro" }
