[package]
name = "decompress"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[example]]
name = "decompress_recording"

[dev-dependencies]
anyhow = "1.0.86"
brotli = "3.5.0"
byteorder = "1.5.0"
bytes = "1.6.1"
serde_json = "1.0.121"
uncage-model = { workspace = true }
