[package]
name = "decompress"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[example]]
name = "decompress_recording"

[dev-dependencies]
anyhow = { workspace = true }
brotli = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
uncage-model = { workspace = true }
