[package]
name = "playback"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[example]]
name = "playback_blob"

[dev-dependencies]
anyhow = "1.0.86"
brotli = "3.5.0"
byteorder = "1.5.0"
bytes = "1.6.1"
cairo-rs = { version = "0.9.1", features = ["svg", "png", "v1_16"] }
nalgebra = "*"
nalgebra-glm = "0.12.0"
pastel = "0.8.1"
serde_json = "1.0.121"
uncage-client = { workspace = true }
uncage-model = { workspace = true }
